Bug 244446 - Setting textContent can leave dir=auto content in wrong directionality
Summary: Setting textContent can leave dir=auto content in wrong directionality
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: DOM (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ryosuke Niwa
URL:
Keywords: InRadar
Depends on:
Blocks: 64861
  Show dependency treegraph
 
Reported: 2022-08-28 02:03 PDT by Ryosuke Niwa
Modified: 2022-08-29 00:51 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ryosuke Niwa 2022-08-28 02:03:12 PDT
Replacing all children with textContent inside dir=auto sometimes doesn't work.
Comment 1 Ryosuke Niwa 2022-08-28 02:17:59 PDT
Pull request: https://github.com/WebKit/WebKit/pull/3744
Comment 2 EWS 2022-08-28 12:30:13 PDT
Committed 253881@main (553beb07a369): <https://commits.webkit.org/253881@main>

Reviewed commits have been landed. Closing PR #3744 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-08-28 12:31:23 PDT
<rdar://problem/99252835>
Comment 4 Ryosuke Niwa 2022-08-28 22:43:05 PDT
Oh, wtf... somehow I didn't add tests.
Comment 5 Ryosuke Niwa 2022-08-28 22:47:15 PDT
Re-opening for pull request https://github.com/WebKit/WebKit/pull/3757
Comment 6 EWS 2022-08-29 00:51:38 PDT
Committed 253896@main (f3ab0d7fe454): <https://commits.webkit.org/253896@main>

Reviewed commits have been landed. Closing PR #3757 and removing active labels.